Made the language pages responsive and made the index html code cleaner

--- a/css/page.css
+++ b/css/page.css
@@ -42,7 +42,7 @@
     -ms-flex: 3;
     flex: 3;
     background-color: beige;
-    padding: 10px;
+    padding-left: 2.5%;
   }
   
   /* Style the footer */
