--- a/css/page.css
+++ b/css/page.css
@@ -9,6 +9,20 @@
     min-width: 100vw;
     background-color: #3e4b54;
   }
+
+  button{
+    font-family: Verdana, Tahoma, sans-serif;
+    background-color: #A88D72;
+    color: black;
+    border: none;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
   
   /* Style the header */
   header {
